tests/integration/snapshots/integration__commands__check__object_double_open_curly.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{{
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `{`
 --> stdin:1:2
  |
1 | {{
  | -^
  | |
  | expected due to `{`
